--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "dev": "set NODE_ENV=development&& nodemon index.js",
+    "start": "set NODE_ENV=production&& node index.js",
     "build": ""
   },
   "keywords": [
