--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,10 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node",
-            "config": { "zeroConfig": true }
-        }
-    ],
-    "routes": [
-        { "src": "/(.*)", "dest": "index.js" }
-    ]
+  "version": 2,
+  "builds": [{ "src": "*.js", "use": "@vercel/node" }],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
